--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Lakshya CTF</title>
+    <title>eHacon • CTF</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/bootstrap4-neon-glow.min.css">
-
 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel='stylesheet' href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
@@ -40,12 +39,12 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
                             <a href="index.html" class="pl-md-0 p-3 text-decoration-none text-light">
-                                <h3 class="bold"><span class="color_danger">LAKSHYA</span><span class="color_white">CTF</span></h3>
+                                <h3 class="bold"><span class="color_green">CTF.</span><span class="color_white">eHacon</span></h3>
                             </a>
                         </div>
                         <div class="navbar-nav ml-auto">
                             <a href="index.html" class="p-3 text-decoration-none text-white bold">Home</a>
-                            <a href="about.html" class="p-3 text-decoration-none text-light bold">About</a>
+                            <!-- <a href="about.html" class="p-3 text-decoration-none text-light bold">About</a> -->
                             <a href="hackerboard.html" class="p-3 text-decoration-none text-light bold">Hackerboard</a>
                             <a href="login.html" class="p-3 text-decoration-none text-light bold">Login</a>
                             <a href="register.html" class="p-3 text-decoration-none text-light bold">Register</a>
@@ -60,8 +59,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-8">
-                        <h1 class="display-1 bold color_white content__title">LAKSHYA CTF<span class="vim-caret">&nbsp;</span></h1>
-                        <h1 class="display-1 bold color_white content__title2">INC 2020</h1>
+                        <h1 class="display-1 bold color_white content__title">eHACON CTF<span class="vim-caret">&nbsp;</span></h1>
+                        <h1 class="display-1 bold color_white content__title2">2021</h1>
                     </div>
                 </div>
                 <div class="row">
@@ -69,8 +68,8 @@
                         <p class="mt-5 text-grey text-spacey hackerFont lead">
                             The quieter you become the more you are able to hear.
                         </p>
-                        <button class="btn btn-outline-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left typewriter" onclick="(function(){window.location.href='login.html'})();">
-                            <h4>Login</h4>
+                        <button class="btn btn-outline-success btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick="(function(){window.location.href='register.html'})();">
+                            <h4>Register</h4>
                         </button>
                     </div>
                 </div>
@@ -78,11 +77,8 @@
         </div>
     </div>
 
-
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
