--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Lakshya CTF</title>
+    <title>eHacon • CTF</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
@@ -34,12 +34,12 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a href="index.html" class="pl-md-0 p-3 text-decoration-none text-light">
-                            <h3 class="bold"><span class="color_danger">LAKSHYA</span><span class="color_white">CTF</span></h3>
+                            <h3 class="bold"><span class="color_green">CTF.</span><span class="color_white">eHacon</span></h3>
                         </a>
                     </div>
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="p-3 text-decoration-none text-light bold">Home</a>
-                        <a href="about.html" class="p-3 text-decoration-none text-light bold">About</a>
+                        <!-- <a href="about.html" class="p-3 text-decoration-none text-light bold">About</a> -->
                         <a href="hackerboard.html" class="p-3 text-decoration-none text-light bold">Hackerboard</a>
                         <a href="login.html" class="p-3 text-decoration-none text-white bold">Login</a>
                         <a href="register.html" class="p-3 text-decoration-none text-light bold">Register</a>
@@ -54,17 +54,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-8">
-                    <h1 class="display-1 bold color_white content__title">LAKSHYA CTF<span class="vim-caret">&nbsp;</span></h1>
+                    <h1 class="display-1 bold color_white content__title">eHACON CTF<span class="vim-caret">&nbsp;</span></h1>
                     <p class="text-grey text-spacey hackerFont lead mb-5">
                         Type your credentials to conquer the world
                     </p>
                     <div class="row hackerFont">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="team_name" placeholder="Team name">
+                                <input type="email" class="form-control" id="email" placeholder="Email" required>
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control" id="password" placeholder="Password">
+                                <input type="password" class="form-control" id="password" placeholder="Password" required>
                                 <small id="passHelp" class="form-text text-muted">Make sure nobody's behind you</small>
                             </div>
                         </div>
@@ -73,7 +73,7 @@
             </div>
             <div class="row">
                 <div class="col-xl-8">
-                    <button class="btn btn-outline-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left typewriter" onclick="window.location.href='instructions.html';">
+                    <button class="btn btn-outline-success btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick="window.location.href='instructions.html';">
                     <h4>Login</h4>
                     </button>
                     <small id="registerHelp" class="mt-3 form-text text-muted">Not Registered? <a href="register.html">Register here</a></small>
