--- a/hackerboard.html
+++ b/hackerboard.html
@@ -29,7 +29,7 @@
     </div>
     <div class="navbar-dark text-white">
         <div class="container">
-            <nav class="navbar px-0 navbar-expand-lg navbar-dark">
+            <nav class="navbar px-0 pb-0 navbar-expand-lg navbar-dark">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
