--- a/add-member.html
+++ b/add-member.html
@@ -19,11 +19,11 @@
 
 <body class="imgloaded">
     <div class="glitch">
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
+        <div class="glitch__img glitch__img_register"></div>
+        <div class="glitch__img glitch__img_register"></div>
+        <div class="glitch__img glitch__img_register"></div>
+        <div class="glitch__img glitch__img_register"></div>
+        <div class="glitch__img glitch__img_register"></div>
     </div>
     <div class="navbar-dark text-white">
         <div class="container">
@@ -40,8 +40,7 @@
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="p-3 text-decoration-none text-light bold">Home</a>
                         <a href="hackerboard.html" class="p-3 text-decoration-none text-light bold">Hackerboard</a>
-                        <a href="login.html" class="p-3 text-decoration-none text-white bold">Login</a>
-                        <a href="register.html" class="p-3 text-decoration-none text-light bold">Register</a>
+                        <a href="index.html" class="p-3 text-decoration-none text-light bold">Logout</a>
                     </div>
                 </div>
             </nav>
@@ -55,27 +54,32 @@
                 <div class="col-xl-8">
                     <h1 class="display-1 bold color_white content__title">eHACON CTF<span class="vim-caret">&nbsp;</span></h1>
                     <p class="text-grey text-spacey hackerFont lead mb-5">
-                        Type your credentials to conquer the world
+                        Teamwork makes the dream work
                     </p>
-                    <div class="row hackerFont">
+                    <div class="row  hackerFont">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="email" class="form-control" id="email" placeholder="Email" required>
+                                <small class="form-text text-muted">Add new team member</small>
+                                <input type="text" class="form-control" id="l-fName" placeholder="First Name" required>
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control" id="password" placeholder="Password" required>
-                                <small class="form-text text-muted">Make sure nobody's behind you</small>
+                                <input type="text" class="form-control" id="lName" placeholder=" Last Name" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control" id="Email" placeholder="Email" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="tel" class="form-control" id="mob" placeholder="Mobile Number" pattern="^\d{10}$ " required>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-8">
-                    <button class="btn btn-outline-success btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick="window.location.href='dashboard.html';">
-                    <h4>Login</h4>
+                <div class="col-xl-12">
+                    <button class="btn btn-outline-success btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick="window.location.href='login.html';">
+                            <h4>Add Teammate</h4>
                     </button>
-                    <small class="mt-3 form-text text-muted">Not Registered? <a href="register.html">Register here</a></small>
                 </div>
             </div>
         </div>
