--- a/dashboard.html
+++ b/dashboard.html
@@ -19,11 +19,11 @@
 
 <body class="imgloaded">
     <div class="glitch">
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
+        <div class="glitch__img glitch__img_register"></div>
+        <div class="glitch__img glitch__img_register"></div>
+        <div class="glitch__img glitch__img_register"></div>
+        <div class="glitch__img glitch__img_register"></div>
+        <div class="glitch__img glitch__img_register"></div>
     </div>
     <div class="navbar-dark text-white">
         <div class="container">
@@ -40,8 +40,7 @@
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="p-3 text-decoration-none text-light bold">Home</a>
                         <a href="hackerboard.html" class="p-3 text-decoration-none text-light bold">Hackerboard</a>
-                        <a href="login.html" class="p-3 text-decoration-none text-white bold">Login</a>
-                        <a href="register.html" class="p-3 text-decoration-none text-light bold">Register</a>
+                        <a href="index.html" class="p-3 text-decoration-none text-light bold">Logout</a>
                     </div>
                 </div>
             </nav>
@@ -52,30 +51,35 @@
     <div class="jumbotron bg-transparent mb-0 pt-3 radius-0">
         <div class="container">
             <div class="row">
-                <div class="col-xl-8">
-                    <h1 class="display-1 bold color_white content__title">eHACON CTF<span class="vim-caret">&nbsp;</span></h1>
+                <div class="col-xl-12">
+                    <h1 class="display-1 bold color_white content__title">Welcome {name}<span class="vim-caret">&nbsp;</span></h1>
                     <p class="text-grey text-spacey hackerFont lead mb-5">
-                        Type your credentials to conquer the world
+                        Add teammates to your squad.
                     </p>
-                    <div class="row hackerFont">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="email" placeholder="Email" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" id="password" placeholder="Password" required>
-                                <small class="form-text text-muted">Make sure nobody's behind you</small>
+                    <div class="row align-items-stretch mb-5">
+                        <div class="col-xl-3 col-12 mb-xl-0 mb-3">
+                            <div class="card btn btn-outline-success btn-shadow" style="height:100%">
+                                <div class="card-body align-items-center justify-content-center d-flex">
+                                    <h4 class="text-center display-5 bold color_white">{Name}</h4>
+                                </div>
                             </div>
                         </div>
+                        <!-- Last Child -->
+                        <!-- <div class="col-xl-3 col-12">
+                            <div class="card btn btn-outline-success btn-shadow" style="height:100%">
+                                <div class="card-body align-items-center justify-content-center d-flex">
+                                    <h4 class="text-center display-5 bold color_white">{Name 3}</h4>
+                                </div>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-8">
-                    <button class="btn btn-outline-success btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick="window.location.href='dashboard.html';">
-                    <h4>Login</h4>
+                <div class="col-xl-12">
+                    <button class="btn btn-outline-success btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick="window.location.href='login.html';">
+                            <h4>Add New Teammate</h4>
                     </button>
-                    <small class="mt-3 form-text text-muted">Not Registered? <a href="register.html">Register here</a></small>
                 </div>
             </div>
         </div>
