--- a/registered.html
+++ b/registered.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>eHacon • CTF</title>
+    <title>eHacons • CTF</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
@@ -17,17 +17,17 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body class="imgloaded">
+<body class="imgloaded" style="background-color:#0b120d!important;">
     <div class="glitch">
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
-        <div class="glitch__img"></div>
+        <div class="glitch__img glitch__img_registered"></div>
+        <div class="glitch__img glitch__img_registered"></div>
+        <div class="glitch__img glitch__img_registered"></div>
+        <div class="glitch__img glitch__img_registered"></div>
+        <div class="glitch__img glitch__img_registered"></div>
     </div>
     <div class="navbar-dark text-white">
         <div class="container">
-            <nav class="navbar px-0 pb-0 navbar-expand-lg navbar-dark">
+            <nav class="navbar px-0 navbar-expand-lg navbar-dark">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,45 +37,23 @@
                             <h3 class="bold"><span class="color_green">CTF.</span><span class="color_white">eHacon</span></h3>
                         </a>
                     </div>
-                    <div class="navbar-nav ml-auto">
-                        <a href="index.html" class="p-3 text-decoration-none text-light bold">Home</a>
-                        <a href="hackerboard.html" class="p-3 text-decoration-none text-light bold">Hackerboard</a>
-                        <a href="login.html" class="p-3 text-decoration-none text-white bold">Login</a>
-                        <a href="register.html" class="p-3 text-decoration-none text-light bold">Register</a>
-                    </div>
                 </div>
             </nav>
 
         </div>
     </div>
 
-    <div class="jumbotron bg-transparent mb-0 pt-3 radius-0">
+    <div class="jumbotron bg-transparent mb-0 pt-5 radius-0">
         <div class="container">
             <div class="row">
-                <div class="col-xl-8">
-                    <h1 class="display-1 bold color_white content__title">eHACON CTF<span class="vim-caret">&nbsp;</span></h1>
-                    <p class="text-grey text-spacey hackerFont lead mb-5">
-                        Type your credentials to conquer the world
-                    </p>
-                    <div class="row hackerFont">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input type="email" class="form-control" id="email" placeholder="Email" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="password" class="form-control" id="password" placeholder="Password" required>
-                                <small class="form-text text-muted">Make sure nobody's behind you</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-8">
-                    <button class="btn btn-outline-success btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick="window.location.href='dashboard.html';">
-                    <h4>Login</h4>
+                <div class="col-xl-12 text-center py-5" style="background-color:#000000DF;">
+                    <h1 class="display-2 bold color_white content__title">Registration Successful<span class="vim-caret">&nbsp;</span></h1>
+                    
+                    <h1 class="px-5 display-5 color_green">A verification mail has been sent to your email.</h1>
+
+                    <button class="btn btn-outline-success btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick="window.location.href='login.html';">
+                            <h4>Go To Login</h4>
                     </button>
-                    <small class="mt-3 form-text text-muted">Not Registered? <a href="register.html">Register here</a></small>
                 </div>
             </div>
         </div>
