--- a/dashboard.html
+++ b/dashboard.html
@@ -29,8 +29,8 @@
         <div class="container">
             <nav class="navbar px-0 pb-0 navbar-expand-lg navbar-dark">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a href="index.html" class="pl-md-0 p-3 text-decoration-none text-light">
@@ -44,7 +44,6 @@
                     </div>
                 </div>
             </nav>
-
         </div>
     </div>
 
@@ -64,14 +63,27 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Last Child -->
-                        <!-- <div class="col-xl-3 col-12">
+                        <div class="col-xl-3 col-12 mb-xl-0 mb-3">
                             <div class="card btn btn-outline-success btn-shadow" style="height:100%">
                                 <div class="card-body align-items-center justify-content-center d-flex">
-                                    <h4 class="text-center display-5 bold color_white">{Name 3}</h4>
+                                    <h4 class="text-center display-5 bold color_white">{Name}</h4>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
+                        <div class="col-xl-3 col-12 mb-xl-0 mb-3">
+                            <div class="card btn btn-outline-success btn-shadow" style="height:100%">
+                                <div class="card-body align-items-center justify-content-center d-flex">
+                                    <h4 class="text-center display-5 bold color_white">{Name}</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-12 mb-xl-0 mb-3">
+                            <div class="card btn btn-outline-success btn-shadow" style="height:100%">
+                                <div class="card-body align-items-center justify-content-center d-flex">
+                                    <h4 class="text-center display-5 bold color_white">{Name}</h4>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
