--- a/add-member.html
+++ b/add-member.html
@@ -40,6 +40,7 @@
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="p-3 text-decoration-none text-light bold">Home</a>
                         <a href="hackerboard.html" class="p-3 text-decoration-none text-light bold">Hackerboard</a>
+                        <a href="profile.html" class="p-3 text-decoration-none text-light bold">Profile</a>
                         <a href="index.html" class="p-3 text-decoration-none text-light bold">Logout</a>
                     </div>
                 </div>
