--- a/forgot-password.html
+++ b/forgot-password.html
@@ -29,8 +29,8 @@
         <div class="container">
             <nav class="navbar px-0 pb-0 navbar-expand-lg navbar-dark">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+          <span class="navbar-toggler-icon"></span>
+        </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a href="index.html" class="pl-md-0 p-3 text-decoration-none text-light">
@@ -45,6 +45,7 @@
                     </div>
                 </div>
             </nav>
+
         </div>
     </div>
 
@@ -54,16 +55,15 @@
                 <div class="col-xl-8">
                     <h1 class="display-1 bold color_white content__title">eHACON CTF<span class="vim-caret">&nbsp;</span></h1>
                     <p class="text-grey text-spacey hackerFont lead mb-5">
-                        Type your credentials to conquer the world
+                        Generate new password
                     </p>
                     <div class="row hackerFont">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="email" class="form-control" id="email" placeholder="Email" required>
+                                <input type="text" class="form-control" id="username" placeholder="Username" required>
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control" id="password" placeholder="Password" required>
-                                <small class="form-text text-right text-muted"><a href="forgot-password.html">Forgot password?</a></small>
+                                <input type="email" class="form-control" id="email" placeholder="Email" required>
                             </div>
                         </div>
                     </div>
@@ -71,27 +71,12 @@
             </div>
             <div class="row">
                 <div class="col-xl-8">
-                    <button class="btn btn-outline-success btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick="window.location.href='dashboard.html';">
-                        <h4>Login</h4>
-                    </button>
-                    <button class="btn btn-outline-success btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick=Toasty()>
-                        <h4>Toast</h4>
+                    <button class="btn btn-outline-success btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick="window.location.href='generated.html';">
+                    <h4>Generate</h4>
                     </button>
                     <small class="mt-3 form-text text-muted">Not Registered? <a href="register.html">Register here</a></small>
                 </div>
             </div>
-        </div>
-    </div>
-
-
-
-    <!-- Toast -->
-    <div class="toast" data-animation="true" data-autohide="true" id="notification" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; bottom: 20px; left: 20px;">
-        <div class="toast-header">
-            <strong class="mr-auto">Invalid credentials</strong>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
         </div>
     </div>
 
@@ -103,7 +88,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="./js/toast.js"></script>
 
 </body>
 
