--- a/profile.html
+++ b/profile.html
@@ -40,6 +40,7 @@
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="p-3 text-decoration-none text-light bold">Home</a>
                         <a href="hackerboard.html" class="p-3 text-decoration-none text-light bold">Hackerboard</a>
+                        <a href="profile.html" class="p-3 text-decoration-none text-white bold">Profile</a>
                         <a href="index.html" class="p-3 text-decoration-none text-light bold">Logout</a>
                     </div>
                 </div>
@@ -58,16 +59,16 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <small class="form-text text-muted">Edit team member</small>
-                                <input type="text" class="form-control" disabled id="fName" value="First" required>
+                                <input type="text" class="form-control" disabled id="fName" value="First" onchange=diff() required>
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" disabled id="lName" value="Last" required>
+                                <input type="text" class="form-control" disabled id="lName" value="Last" onchange=diff() required>
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control" disabled id="Email" value="abc@gmail.com" required>
+                                <input type="email" class="form-control" disabled id="Email" value="abc@gmail.com" onchange=diff() required>
                             </div>
                             <div class="form-group">
-                                <input type="tel" class="form-control" disabled id="mob" value="9874657584" pattern="^\d{10}$ " required>
+                                <input type="tel" class="form-control" disabled id="mob" value="9874657584" onchange=diff() pattern="^\d{10}$ " required>
                             </div>
                         </div>
                     </div>
@@ -75,33 +76,13 @@
             </div>
             <div class="row">
                 <div class="col-xl-12">
-                    <button id="d-btn-1" class="btn btn-outline-warning btn-shadow px-3 my-2 mr-3 ml-0 ml-sm-1 text-left" onclick=handleSave()>
+                    <button id="edit-btn" class="btn btn-outline-warning btn-shadow px-3 my-2 mr-3 ml-0 ml-sm-1 text-left" onclick=handleSave()>
                             <h4>Edit</h4>
                     </button>
                 
-                    <button class="btn btn-outline-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" data-toggle="modal" data-target="#deleteConfirmationModal">
-                        <h4>Remove</h4>
+                    <button id="discard-btn" class="btn btn-outline-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick=handleDiscard() style="display:none;">
+                        <h4>Discard</h4>
                     </button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-    <!-- Modal -->
-    <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmation" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h6>Are you sure you want to remove your teammate?</h6>
-                    <button class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-dark btn-shadow px-3 my-2 ml-0 mr-3 ml-sm-1 text-left" data-dismiss="modal">No</button>
-                    <button class="btn btn-danger btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick="window.location.href='./dashboard.html';">Yes</button>
                 </div>
             </div>
         </div>
@@ -115,7 +96,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="./js/save.js"></script>
+    <script src="./js/profileFunctions.js"></script>
 
 </body>
 
