Almost done for now

--- a/generated.html
+++ b/generated.html
@@ -47,7 +47,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-12 text-center py-5" style="background-color:#000000DF;">
-                    <h1 class="px-5 display-5 color_green">Generated password has been sent to your registered email.</h1>
+                    <h1 class="px-5 display-5 color_green">New password has been sent to your registered email.</h1>
 
                     <button class="btn btn-outline-success btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left" onclick="window.location.href='login.html';">
                             <h4>Go To Login</h4>
